plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java'
}
apply plugin: 'java'
apply plugin: 'maven'

group 'net.dirtcraft.update.bootstrapper'
version '1.0.1'

sourceCompatibility = 1.8

configurations {
    shadowCompile
    compile.extendsFrom(shadowCompile)
}
repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    shadowCompile 'commons-io:commons-io:2.6'
}


jar{
    archiveName = "${project.name}.jar"
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': 'net.dirtcraft.update.bootstrapper.Main'
        )
    }
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

shadowJar {
    configurations = [project.configurations.shadowCompile]
    archiveFileName = "${project.name}.jar"
    minimize()
}

artifacts {
    archives sourcesJar
    archives javadocJar
    archives shadowJar
}

build.dependsOn(shadowJar);